[gd_scene load_steps=12 format=3 uid="uid://cy1cbcapvrv3k"]

[ext_resource type="Texture2D" uid="uid://b5yayc7a2fhyl" path="res://assets/enemy_assets/monster_truck_phase_2_wheel.png" id="1_cmy68"]
[ext_resource type="Script" uid="uid://nge7la5pqscp" path="res://scripts/enemies/boss_phase_2_wheel.gd" id="1_didle"]
[ext_resource type="Texture2D" uid="uid://bihp80n0mlvjd" path="res://assets/misc/assassin_highlight.png" id="2_h0djm"]
[ext_resource type="Texture2D" uid="uid://77kme6qd60kl" path="res://assets/misc/knight_highlight.png" id="3_didle"]
[ext_resource type="Texture2D" uid="uid://57ujq3plus2n" path="res://assets/misc/sorcerer_highlight.png" id="4_phrn3"]
[ext_resource type="Texture2D" uid="uid://3qtd746vsxx1" path="res://assets/misc/templar_highlight.png" id="5_utbe7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phrn3"]
size = Vector2(31, 86)

[sub_resource type="Animation" id="Animation_cmy68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2rhet"]
resource_name = "Spinning"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mt716"]
_data = {
&"RESET": SubResource("Animation_cmy68"),
&"Spinning": SubResource("Animation_2rhet")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_didle"]
size = Vector2(262.50012, 560.0002)

[node name="BossPhase2RightWheel" type="CharacterBody2D" groups=["enemies"]]
y_sort_enabled = true
scale = Vector2(2, 2)
script = ExtResource("1_didle")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cmy68")
flip_h = true
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 3)
shape = SubResource("RectangleShape2D_phrn3")
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mt716")
}

[node name="AutoAttackDelay" type="Timer" parent="."]

[node name="AutoAttackRange" type="Area2D" parent="."]
scale = Vector2(0.19999999, 0.19999999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAttackRange"]
position = Vector2(26.24998, 17.500004)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("RectangleShape2D_didle")
debug_color = Color(1, 0.0134694865, 0.041929327, 0.41960785)

[node name="HighlightAssassin" type="Sprite2D" parent="."]
visible = false
position = Vector2(8.5, 3.5)
scale = Vector2(1.59375, 3.4531252)
texture = ExtResource("2_h0djm")

[node name="HighlightKnight" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, 3.5000005)
scale = Vector2(1.5781249, 3.5)
texture = ExtResource("3_didle")

[node name="HighlightSorcerer" type="Sprite2D" parent="."]
visible = false
position = Vector2(8.5, 3.5)
scale = Vector2(1.578125, 3.46875)
texture = ExtResource("4_phrn3")

[node name="HighlightTemplar" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.5, 3)
scale = Vector2(1.578125, 3.4843748)
texture = ExtResource("5_utbe7")

[connection signal="timeout" from="AutoAttackDelay" to="." method="_on_auto_attack_delay_timeout"]
[connection signal="body_entered" from="AutoAttackRange" to="." method="_on_auto_attack_range_body_entered"]
